Resolve "Add a "back to menu" button at the end of TPs"
Squashed commit of the following:

* button-link: go to previous menu directory

* fix: update button url

* add releasenote

* goback-button: use small caps to recall toc

* css: style go-back button

* layout: add button

* multiple_sections: remove len duplicates

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -107,6 +107,19 @@ a.code-stub-button {
     text-decoration: none;
 }
 
+/** go-back button **/
+#go-back-button {
+    background-color: var(--primary-color);
+    border-radius: 50pt;
+    color: white;
+    display: block;
+    margin: 5em auto;
+    padding: 10pt 15pt;
+    width: fit-content;
+    text-decoration: none;
+    font-variant: small-caps;
+}
+
 /**** tags ****/
 
 .article-tagged-item h2 { 
